2006-07-05  Derek Price  <derek@ximbiot.com>

	* same-inode.h, strndup.c, strndup.h, strnlen.c, strnlen.h, xstrndup.c,
	xstrndup.h: New file from GNULIB.
	* Makefile.am: Move changes from...
	* Makefile.gnulib: ...this regenerated file.
	* basename.c, cycle-check.c, cycle-check.h, dirname.c, dirname.h,
	filenamecat.c, getcwd.c, inttypes.h, stat-macros.h, stat_.h, stdint_.h,
	stripslash.c: Update from GNULIB.

2006-07-03  Mark D. Baushke  <mdb@gnu.org>

	* stdint_.h: Fork stdint_.h to work on MacOS X 10.4.x.

2006-07-02  Derek Price  <derek@ximbiot.com>

	* Makefile.gnulib, stdint_.h: Update from GNULIB.
	* Makefile.am: Update to match Makefile.gnulib.

2006-07-01  Derek Price  <derek@ximbiot.com>

	* stat_.h: Update from GNULIB.

2006-06-30  Jim Hyslop <jhyslop@dreampossible.ca>

	* getaddrinfo.c: fixed typo

2006-06-29  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Add stat.h.
	* inet_ntop.c, inet_ntop.h, stat_.h, wcwidth.h: New files from GNULIB.
	* getaddrinfo.c, getaddrinfo.h, mbchar.h, strftime.c, Makefile.gnulib:
	Update from GNULIB.
	* Makefile.am: Update to match Makefile.gnulib.

2006-06-27  Mark D. Baushke  <mdb@gnu.org>

	* stdint_.h: Update from gnulib.

2006-06-26  Mark D. Baushke  <mdb@gnu.org>

	* base64.c: Update from gnulib. This file is no longer forked.

	* Makefile.gnulib, stdint_.h: Update from gnulib.
	* Makefile.am: Update from Makefile.gnulib.
	* Makefile.in: Regenerated.

2006-06-24  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.gnulib, stdint_.h: Update from gnulib.
	* Makefile.am: Update from Makefile.gnulib
	* Makefile.in: Regenerated.

2006-06-23  Larry Jones  <lawrence.jones@ugs.com>

	* stdint_.h: Try harder to find a definition of WCHAR_MIN/MAX.
	Combine BSD/OS stuff with OpenBSD/SGI and use the correct
	preprocessor symbol.

2006-06-23  Mark D. Baushke  <mdb@gnu.org>

	* glob.c (collated_compare): Update from gnulib.
	* stdint_.h: Both BSD/OS 4.2 and SGI-cc IRIX 5.3 seem to also need
	<sys/types.h> included.