@@ -208,6 +208,12 @@ libgnu_a_SOURCES += size_max.h
 
 ## end   gnulib module size_max
 
+## begin gnulib module snprintf
+
+libgnu_a_SOURCES += snprintf.h
+
+## end   gnulib module snprintf
+
 ## begin gnulib module stdbool
 
 BUILT_SOURCES += $(STDBOOL_H)
