@@ -1,3 +1,11 @@
+2006-07-06  Derek Price  <derek@ximbiot.com>
+
+	* Makefile.am: Import changes from...
+	* Makefile.gnulib: ...this regenerated file.
+	* exit.h, fnmatch.c, fnmatch_loop.c, getaddrinfo.c, getaddrinfo.h,
+	getdate.c, getdate.y, strtol.c: Update from GNULIB.
+	* snprintf.c, snprintf.h: New files from GNULIB.
+
 2006-07-05  Derek Price  <derek@ximbiot.com>
 
 	* same-inode.h, strndup.c, strndup.h, strnlen.c, strnlen.h, xstrndup.c,
